# GnomeTestapp

./: README.md  meson.build  org.my.testpython.json
data/: meson.build  org.my.testpython.desktop.in  org.my.testpython.gschema.xml  org.my.testpython.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  testpython.gresource.xml  testpython.in  window.py  window.ui
